--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,9 @@
 
 #root {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .App {
@@ -16,11 +18,16 @@
 
 .post {
     display: flex;
+    margin-top: 25px;
     padding: 15px;
     border: 2px solid teal;
     margin-top: 15px;
     justify-content: space-between;
     align-items: center;
+}
+
+.post__btns {
+    display: flex;
 }
 
 .post-enter {
@@ -39,4 +46,35 @@ opacity: 1;
 .post-exit-active {
 opacity: 0;
 transition: opacity 500ms ease-in;
+}
+
+
+.page__wrapper {
+    margin-top: 30px;
+    display: flex;
+}
+
+.page {
+    padding: 10px;
+    border: 1px solid teal;
+    cursor: pointer;
+    margin-left: 1px;
+}
+
+.page__current {
+    border: 2px solid orange;
+    font-weight: bold;
+}
+
+.navbar {
+    height: 50px;
+    width: 100vh;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+    background: lightgray;
+}
+
+.navbar__links {
+    margin-left: auto;
 }
